[gd_scene load_steps=3 format=2]

[ext_resource path="res://Lighthouse/2pTheme.tres" type="Theme" id=1]
[ext_resource path="res://Lighthouse/Lighthouse_player.gd" type="Script" id=3]

[node name="LighthousePlayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="SceneHolder" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 152.0
margin_bottom = 112.0

[node name="Blink" type="Button" parent="VBoxContainer"]
margin_right = 240.0
margin_bottom = 22.0
theme = ExtResource( 1 )
text = "Blink"

[node name="Sweep" type="Button" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 240.0
margin_bottom = 48.0
theme = ExtResource( 1 )
text = "Sweep"

[node name="Both" type="Button" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 240.0
margin_bottom = 74.0
theme = ExtResource( 1 )
text = "Both"

[node name="Continous" type="CheckButton" parent="VBoxContainer"]
margin_top = 78.0
margin_right = 240.0
margin_bottom = 118.0
theme = ExtResource( 1 )
text = "Continuous"

[node name="IntelSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 122.0
margin_right = 240.0
margin_bottom = 138.0
theme = ExtResource( 1 )
max_value = 6.0
rounded = true
scrollable = false
tick_count = 7
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 142.0
margin_right = 240.0
margin_bottom = 164.0
theme = ExtResource( 1 )

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 92.0
margin_bottom = 22.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Back"

[node name="SceneLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 96.0
margin_top = 3.0
margin_right = 144.0
margin_bottom = 19.0
theme = ExtResource( 1 )
text = "1/4"

[node name="NextButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 148.0
margin_right = 240.0
margin_bottom = 22.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Next"

[connection signal="pressed" from="VBoxContainer/Blink" to="." method="_on_Blink_pressed"]
[connection signal="pressed" from="VBoxContainer/Sweep" to="." method="_on_Sweep_pressed"]
[connection signal="pressed" from="VBoxContainer/Both" to="." method="_on_Both_pressed"]
[connection signal="toggled" from="VBoxContainer/Continous" to="." method="_on_Continous_toggled"]
[connection signal="value_changed" from="VBoxContainer/IntelSlider" to="." method="_on_IntelSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
